@@ -23,7 +23,7 @@
 
 #  Revision:
 
-#     $Id: user_agent.pl,v 1.35 2008/06/09 13:17:48 aa Exp $
+#     $Id: user_agent.pl,v 1.36 2008/08/29 12:15:27 aa Exp $
 
 
 #  Copyright:
@@ -67,7 +67,7 @@ itself.
 
 =head1 REVISION
 
-$Id: user_agent.pl,v 1.35 2008/06/09 13:17:48 aa Exp $
+$Id: user_agent.pl,v 1.36 2008/08/29 12:15:27 aa Exp $
 
 =head1 AUTHORS
 
@@ -84,7 +84,7 @@ Copyright (C) 2003 University of Exeter. All Rights Reserved.
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.35 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.36 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
@@ -431,7 +431,8 @@ $ua->set_ua( $lwp );
 if ( $config->get_state("ua.unique_process") == 1 ) {
    #$config->set_option( "nodes.LT", "161.72.57.3:8080/axis/services/NodeAgent" );
    $config->set_option( "nodes.LT", "161.72.57.3:8080/org_estar_nodeagent/services/NodeAgent");
-   $config->set_option( "nodes.FTS", "150.203.153.202:8080/axis/services/NodeAgent" );
+   #$config->set_option( "nodes.FTS", "150.203.153.202:8080/axis/services/NodeAgent" );
+   $config->set_option( "nodes.FTS", "150.203.153.202:8080/org_estar_nodeagent/services/NodeAgent" );
    $config->set_option( "nodes.FTN", "132.160.98.239:8080/axis/services/NodeAgent" );
    #$config->set_option( "nodes.UKIRT", "estar.ukirt.jach.hawaii.edu:8080" );
 }
@@ -619,6 +620,9 @@ sub kill_agent {
 # T I M E   A T   T H E   B A R  -------------------------------------------
 
 # $Log: user_agent.pl,v $
+# Revision 1.36  2008/08/29 12:15:27  aa
+# changes for FTS node agent
+#
 # Revision 1.35  2008/06/09 13:17:48  aa
 # Fixed LT endpoint
 #
